Created Currency Converter Using HTML< CSS and JS.

--- a/15 Days 40 Projects/Weather App/index.html
+++ b/15 Days 40 Projects/Weather App/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="https://th.bing.com/th/id/OIP.Bf5__mPEIWqlqjVpxDGYUQHaHa?rs=1&pid=ImgDetMain" type="image/x-icon">
 </head>
 <body>
+    <div class="whether-head">Weather App</div>
     <div class="card">
         <div class="search">
             <input type="text" placeholder="Enter City Name" spellcheck="false">
