Modified Custom Code Editor.

--- a/15 Days 40 Projects/Custom Code Editor/index.html
+++ b/15 Days 40 Projects/Custom Code Editor/index.html
@@ -52,7 +52,8 @@
         <div class="output-head">
             <span>OUTPUT</span>
             <i class="fa-regular fa-floppy-disk" id="save"></i>
-            <i class="fa-regular fa-circle-up" id="full"></i>
+            <i class="fa-regular fa-circle-up resizer" id="full"></i>
+            <i class="fa-regular fa-circle-up resizer" id="mid"></i>
         </div>
         <iframe id="output"></iframe>
     </div>
