--- a/Mini Projects/Age Calculator/index.html
+++ b/Mini Projects/Age Calculator/index.html
@@ -12,7 +12,7 @@
             <h1>JavaScript<br><span>Age Calculator</span></h1>
             <div class="input-box">
                 <input type="date" name="date" id="date">
-                <button class="btn">Calculator</button>
+                <button class="btn">Calculate</button>
             </div>
             <p id="result"></p>
         </div>
