--- a/Mini Projects/Dark & Light Mode/index.html
+++ b/Mini Projects/Dark & Light Mode/index.html
@@ -269,17 +269,6 @@
         </main>
     </div>
 
-    <script>
-        var icon = document.querySelector(".icon");
-        icon.addEventListener("click",() => {
-            document.body.classList.toggle("dark-theme");
-            if(document.body.classList.contains("dark-theme")) {
-                icon.src = "images/sun.png";
-            }
-            else {
-                icon.src = "images/moon.png";
-            }
-        })
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
